...
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_map" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPostFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="88dp"
            app:srcCompat="@drawable/ic_add" />
...
